# crewgraphs

./: .env.example  .gitignore  README.md  SETUP.md  package.json
pipeline/: pyproject.toml
pipeline/src/crewgraphs/: __init__.py  __main__.py  config.py  db.py  efile_extract.py  quarantine.py  raw_store.py  runlog.py  runtime.py  summary.py
pipeline/src/crewgraphs/concept_map/: README.md  __init__.py  cm-2026.07.1.yaml
pipeline/src/crewgraphs/event_map/: __init__.py  em-2026.07.2.yaml
pipeline/src/crewgraphs/jobs/: __init__.py  bmf.py  cross_check.py  derive.py  derive_ratings.py  efile_fetch.py  efile_index.py  efile_parse.py  epostcard.py  event_classify.py  herenow.py  propublica.py  publish.py  publish_gate.py  regattatiming.py  resolve.py  resolve_clubs.py  rollback.py  row2k.py  seed_load.py  timeteam.py
pipeline/tests/: test_cli.py  test_concept_map.py  test_contracts.py  test_efile_extract_golden.py  test_event_classify.py  test_harness_quarantine.py  test_harness_raw_store.py  test_harness_run_report.py  test_harness_runlog.py  test_harness_summary_config.py  test_job_bmf.py  test_job_cross_check.py  test_job_derive.py  test_job_derive_ratings.py  test_job_efile_fetch.py  test_job_efile_index.py  test_job_efile_parse.py  test_job_epostcard.py  test_job_herenow.py  test_job_propublica.py  test_job_publish.py  test_job_publish_gate.py  test_job_regattatiming.py  test_job_resolve.py  test_job_resolve_clubs.py  test_job_rollback.py  test_job_row2k.py  test_job_seed_load.py  test_job_timeteam.py
pipeline/tests/fixtures/golden/: 202031719349300818.xml  (+6 more)
(+246 files in other folders)
