[project]
name = "crewgraphs"
version = "0.0.0"
description = "CrewGraphs ingestion pipeline"
requires-python = ">=3.12"
dependencies = [
  "boto3",
  "httpx",
  "lxml",
  "psycopg[binary]",
  "pyyaml",
  "rapidfuzz",
  "typer"
]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crewgraphs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
